--- a/src/main/resources/user.yaml
+++ b/src/main/resources/user.yaml
@@ -33,7 +33,7 @@ paths:
         '200':
           description: successful operation
           schema:
-            $ref: '#/definitions/User'
+            $ref: 'UUID'
         default:
           description: successful operation
   '/user/{userId}':
@@ -42,7 +42,7 @@ paths:
         - user
       summary: Get user by user id
       description: ''
-      operationId: getUserByName
+      operationId: getUserById
       produces:
         - application/xml
         - application/json
@@ -58,7 +58,7 @@ paths:
           schema:
             $ref: '#/definitions/User'
         '400':
-          description: Invalid username supplied
+          description: Invalid userId supplied
         '404':
           description: User not found
     put:
@@ -112,7 +112,7 @@ paths:
           schema:
             $ref: boolean
         '400':
-          description: Invalid username supplied
+          description: Invalid userId supplied
         '404':
           description: User not found
 definitions:
