--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
     implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.4.2'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.4.2'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.4.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-cassandra', version: '2.4.5'
@@ -27,6 +27,9 @@ dependencies {
     compile "org.openapitools:jackson-databind-nullable:0.2.1"
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
+//    implementation group: 'org.springframework.data', name: 'spring-data-elasticsearch', version: '3.2.13.RELEASE'
+    implementation group: 'org.springframework.data', name: 'spring-data-elasticsearch', version: '4.0.9.RELEASE'
+
 }
 
 test {
