--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,9 @@ dependencies {
     implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.6.4'
 
     implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.2'
-    compile "org.openapitools:jackson-databind-nullable:0.2.1"
+    implementation "org.openapitools:jackson-databind-nullable:0.2.1"
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
-//    implementation group: 'org.springframework.data', name: 'spring-data-elasticsearch', version: '3.2.13.RELEASE'
     implementation group: 'org.springframework.data', name: 'spring-data-elasticsearch', version: '4.0.9.RELEASE'
 
 }
